@@ -1,7 +1,7 @@
 package com.sereneoasis.level.world.biome.biomes.flatland.plains;
 
-import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.BiomeLayers;
+import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.biomes.BiomeCategories;
 import org.bukkit.Material;
 
@@ -12,10 +12,10 @@ import java.util.List;
 public class SnowyPlains extends BiomeRepresentation {
 
     private static final HashMap<BiomeLayers, List<Material>> layers = new HashMap<>() {{
-        put(BiomeLayers.SURFACE, Arrays.asList(Material.GRASS_BLOCK));
-        put(BiomeLayers.PRIMARY, Arrays.asList(Material.DIRT));
+        put(BiomeLayers.SURFACE, List.of(Material.GRASS_BLOCK));
+        put(BiomeLayers.PRIMARY, List.of(Material.DIRT));
         put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
-        put(BiomeLayers.BASE, Arrays.asList(Material.BEDROCK));
+        put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
     public SnowyPlains() {
         super(org.bukkit.block.Biome.SNOWY_PLAINS, "Snowy Plains", layers, -0.7, 0.6, -0.2, BiomeCategories.FLAT);
