@@ -1,7 +1,7 @@
 package com.sereneoasis.level.world.biome.biomes.highland;
 
-import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.BiomeLayers;
+import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.biomes.BiomeCategories;
 import org.bukkit.Material;
 
@@ -12,10 +12,10 @@ import java.util.List;
 public class WindsweptForest extends BiomeRepresentation {
 
     private static final HashMap<BiomeLayers, List<Material>> layers = new HashMap<>() {{
-        put(BiomeLayers.SURFACE, Arrays.asList(Material.GRASS_BLOCK));
-        put(BiomeLayers.PRIMARY, Arrays.asList(Material.DIRT));
+        put(BiomeLayers.SURFACE, List.of(Material.GRASS_BLOCK));
+        put(BiomeLayers.PRIMARY, List.of(Material.DIRT));
         put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
-        put(BiomeLayers.BASE, Arrays.asList(Material.BEDROCK));
+        put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
     public WindsweptForest() {
         super(org.bukkit.block.Biome.WINDSWEPT_FOREST, "Windswept Forest", layers, -0.1, 0.8, 0, 0.5, BiomeCategories.HIGH);
