@@ -1,7 +1,7 @@
 package com.sereneoasis.level.world.biome.biomes.wetland.swamp;
 
-import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.BiomeLayers;
+import com.sereneoasis.level.world.biome.BiomeRepresentation;
 import com.sereneoasis.level.world.biome.biomefeatures.FloraBiome;
 import com.sereneoasis.level.world.biome.biomefeatures.TreeBiome;
 import com.sereneoasis.level.world.biome.biomes.BiomeCategories;
@@ -18,7 +18,7 @@ public class MangroveSwamp extends BiomeRepresentation implements TreeBiome, Flo
         put(BiomeLayers.SURFACE, Arrays.asList(Material.WATER, Material.MUD, Material.DIRT));
         put(BiomeLayers.PRIMARY, Arrays.asList(Material.DIRT, Material.MUD));
         put(BiomeLayers.SECONDARY, Arrays.asList(Material.COAL_ORE, Material.IRON_ORE, Material.REDSTONE_ORE, Material.LAPIS_ORE, Material.GOLD_ORE, Material.DIAMOND_ORE));
-        put(BiomeLayers.BASE, Arrays.asList(Material.BEDROCK));
+        put(BiomeLayers.BASE, List.of(Material.BEDROCK));
     }};
     public MangroveSwamp() {
         super(org.bukkit.block.Biome.MANGROVE_SWAMP, "Mangrove Swamp", layers, 0.5, -0.2, 0.6, BiomeCategories.WET);
